# telepathy-hanging

./: CMakeLists.txt  README  connection.cpp  connection.h  hanging.manager  hanging.service.in  hangingtextchannel.cpp  hangingtextchannel.h  main.cpp  protocol.cpp  protocol.h  telepathy-hanging.pro
